--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Environment variables
 .env
+.env.local
+.env.*.local
 
 # Sensitive credentials and local data
 credentials/
+credentials/*.json
 data/
+data/diagrams/
 
 # Python
 __pycache__/
