docs: add environment configuration template - Create comprehensive .env.example with all required variables - Add detailed comments explaining each configuration option - Include Google Vision API max_results explanation - Document SKIP_EXISTING_DOCUMENTS and FORCE_REPROCESS options - Provide usage scenarios for different processing modes - Add quick reference guide for common configurations

--- a/.env.example
+++ b/.env.example
@@ -2,27 +2,25 @@
 # Azure OpenAI Configuration
 # ============================================================================
 # Get your credentials from: https://portal.azure.com/
-AZURE_OPENAI_API_KEY=your_azure_openai_api_key
-AZURE_OPENAI_ENDPOINT=your_azure_openai_endpoint
-AZURE_OPENAI_DEPLOYMENT_NAME=your_deployment_name
-AZURE_OPENAI_API_VERSION=2024-02-15-preview
-AZURE_OPENAI_EMBEDDING_DEPLOYMENT=your_embedding_deployment_name
+AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
+AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
+AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
+AZURE_OPENAI_API_VERSION=2024-12-01-preview
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT=your-embedding-deployment-name
 
 # ============================================================================
 # Milvus Cloud Configuration
 # ============================================================================
 # Get your credentials from: https://cloud.zilliz.com/
-MILVUS_URI=your_milvus_cloud_uri
-MILVUS_TOKEN=your_milvus_token
-MILVUS_USER=your_milvus_username
-MILVUS_PASSWORD=your_milvus_password
+MILVUS_URI=https://your-instance.zillizcloud.com:19530
+MILVUS_TOKEN=your_milvus_token_here
 MILVUS_COLLECTION_NAME=readme_embeddings
 
 # ============================================================================
 # GitHub Repository Configuration
 # ============================================================================
-GITHUB_REPO_URL=https://github.com/username/repository
-GITHUB_TOKEN=your_github_token_optional  # Optional: for private repos
+GITHUB_REPO_URL=https://github.com/YourUsername/YourRepository.git
+GITHUB_TOKEN=your_github_token_here  # Optional: for private repos
 
 # ============================================================================
 # Application Configuration
@@ -123,5 +121,4 @@ FORCE_REPROCESS=false
 #    → Full reprocess every time (useful for testing)
 #
 # ============================================================================
-
 
